create github pages

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header14 cid-s2b0tb94bl mbr-fullscreen mbr-parallax-background" id="header14-1e">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header14 cid-s2b0tb94bl mbr-parallax-background" id="header14-1e">
 
     
 
@@ -96,7 +96,7 @@
     <div class="container">
         <div class="media-container-row">
 
-            <div class="mbr-figure" style="width: 95%;">
+            <div class="mbr-figure" style="width: 105%;">
                 <img src="assets/images/l3ma-480x320.png" alt="Mobirise" title="">
             </div>
 
