--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="header14 cid-s2b0tb94bl mbr-parallax-background" id="header14-1e">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="header14 cid-s2b0tb94bl mbr-parallax-background" id="header14-1e">
 
     
 
@@ -96,7 +96,7 @@
             </div>
 
             <div class="media-content">
-                <h1 class="mbr-section-title pb-3 align-left mbr-white mbr-fonts-style display-1"><strong>Bombas de tornillos Leistritz:</strong></h1>
+                <h1 class="mbr-section-title pb-3 align-left mbr-white mbr-fonts-style display-1"><strong>Bombas de tornillos Leistritz</strong></h1>
                 <h3 class="mbr-section-subtitle align-left  mbr-light pb-3 mbr-white mbr-fonts-style display-2"><em>Alta eficiencia y resistencia en el bombeo de fluidos viscosos y de altas presiones.</em>&nbsp;</h3>
                 <div class="mbr-section-text  pb-3 ">
                     
