--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="header14 cid-s2b0tb94bl mbr-parallax-background" id="header14-1e">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="header14 cid-s2b0tb94bl mbr-parallax-background" id="header14-1e">
 
     
 
