--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="header14 cid-s2b0tb94bl mbr-parallax-background" id="header14-1e">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="header14 cid-s2b0tb94bl mbr-parallax-background" id="header14-1e">
 
     
 
@@ -132,7 +132,7 @@
                     <p class="mbr-text mbr-fonts-style mbr-lighter display-7">Con sede en Nuremberg, Alemania, Leistritz Pump nació en 1924 cuando Paul Leistritz desarrolló la bomba de tornillo para lubricar los cojinetes en generadores de turbinas de vapor. Hoy, un siglo más tarde, entrega al mercado soluciones eficientes para diversos procesos industriales, respaldado por sus más de 95 años de experiencia.<br><strong>Su amplia gama de productos va desde bombas de doble, triple y cinco tornillos,</strong> hasta de doble tornillo doble voluta.</p>
                     
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-lg btn-secondary display-4" href="index.html#custom-html-21">CONTÁCTANOS</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-lg btn-secondary display-4" href="index.html#custom-html-21">CONTÁCTANOS</a></div>
             </div>
         </div>
     </div>          
